

HEAD
====
Changes:
- defs: HXsizeof_member becomes FIELD_SIZEOF
  (to match the Linux kernel's name)


v3.14.1 (2012-12-31)
====================
Fixes:
- Restore forward-sorting order of ordered maps
  (revert "map: always have needle as second argument")


v3.14 (2012-11-14)
==================
Fixes:
- io: use pathconf(3) to determine dirent size for dir traversal
- rand: avoid division by zero when calling HX_irand with lo==hi
- time: use C++ static_cast syntax for C++ mode
- headers: improve operability with C89 compile mode


v3.13 (2012-07-28)
==================
Enhancements:
- defs: add DEMOTE_TO_PTR
- option: new HXOPT_RQ_ORDER flag, allows unconditional POSIX-style parsing
  (parsing terminates at first non-option encountered)
- option: add HXTYPE_SIZE_T
- time: add functions and macros for arithmetic and handling of timespec
  with support for negative time values
  * time: add HX_TIMESPEC_{EXP,FMT}
  * time: add HX_TIMEVAL_{EXP,FMT}
  * time: add the HX_timespec_isneg function
  * time: add the HX_timespec_neg function
  * time: add the HX_timespec_add function
  * time: add the HX_timespec_mul function
  * time: add the HX_timespec_mulf function
Changes:
- io: remove HX_REALPATH_SYMLINK
- time: rename HX_diff_timespec to HX_timespec_sub (old ABI kept)
- time: rename HX_diff_timeval to HX_timeval_sub (old ABI kept)
- string: make HX_memmem consider the special case of search_length=0
- string: optimize search_length=1 case in HX_memmem
- string: speed up HX_memmem searches for search_length >=2


v3.12.1 (2011-12-15)
====================
Fixes:
- build: make build error-free when using -Wl,--no-undefined
- string: make HX_strdup(NULL) valid again


v3.12 (2010-12-03)
==================
Fixes:
- defs: resolve warning for users of const_cast*() when using -Wextra
- format: error handling for HXformat2_aprintf
- option: do not omit dashes when passthru'ing unknown two-part long opts