@@ -1,0 +1,1 @@
+#include "tc-strchr2.c"
